[package]
name = "stine-cli"
version = "0.1.0"
edition = "2021"
description = "CLI Utility to show information about STINE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib"]

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']

[dependencies]
openssl = { version = '0.10', features = ["vendored"] }

stine-rs = { path = "lib" }
clap = { version = "4.0.7", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

toml = "0.7.2"
either = "1.8.0"
if_chain = "1.0.2"

lettre = "0.10"
chrono = "0.4.22"

anyhow = "1.0.64"
thiserror = "1.0.34"

lazy_static = "1.4.0"

prettytable-rs = "0.10.0"
colored = "2.0.0"

reqwest = "0.11.11"

simplelog = "0.12.0"
log = "0.4.17"
test-log = "0.2.11"

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

dirs = "4.0.0"

[dev-dependencies]
env_logger = "0.10.0"