[package]
name = "stine-rs"
version = "0.1.0"
edition = "2021"
description = "Rust API for STINE"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
serde = { version = "1.0" }
serde_json = "1.0.79"
regex = "1.5"
scraper = "0.12"

chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.6.3" }

tl = "0.7.4"
anyhow = "1.0.64"
either = { version = "1.8.0", features = ["serde"] }
thiserror = "1.0.32"
#mapstruct = { path = "../../mapstruct"}
struct-field-names-as-array = "0.1.3"
lazy_static = "1.4.0"
dirs = "4.0.0"

indicatif = "0.17.1"

log = "0.4.17"
test-log = "0.2.11"

dotenv = "0.15.0"

[dev-dependencies]
env_logger = "0.10.0"