[package]
name = "stine-rs"
version = "0.1.0"
edition = "2021"
description = "Rust API for STINE"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies", "gzip"] }
serde = { version = "1.0" }
serde_json = "1.0.79"
regex = "1.9.1"
scraper = "0.12"

chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.6.3" }

tl = "0.7.4"
anyhow = "1.0.64"
either = { version = "1.8.0", features = ["serde"] }
thiserror = "1.0.32"
#mapstruct = { path = "../../mapstruct"}
struct-field-names-as-array = "0.1.3"
lazy_static = "1.4.0"
dirs = "4.0.0"

indicatif = "0.17.1"

log = "0.4.17"
test-log = "0.2.11"

dotenv = "0.15.0"

cipher = { version = "0.4.3", optional = true }
aes = { version = "0.8.2", optional = true }
cfb-mode = { version = "0.8.2", optional = true }
rand = { version = "0.8.5", optional = true }
ring = { version = "0.17.0-alpha.11", optional = true }
base64 = { version = "0.21.0", optional = true }
md-5 = { version = "0.10.5", optional = true }
hex = { version = "0.4.3", optional = true }

roxmltree = "0.18.0"

[dev-dependencies]
env_logger = "0.10.0"

[features]
mobile = ["dep:cipher", "dep:aes", "dep:cfb-mode", "dep:rand", "dep:ring", "dep:base64", "dep:md-5", "dep:hex"]